fixing up profile alignment

--- a/front/src/pages/Auth2factor/css/2faButton.scss
+++ b/front/src/pages/Auth2factor/css/2faButton.scss
@@ -41,6 +41,7 @@ $font-color: rgba(255, 255, 255, 0.7);
     text-align: center; /* Center the text */
     text-decoration: none;
     display: inline-block;
+    font-family: "dune", Arial, sans-serif;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer; /* Change cursor when hovering over button */
